Replace `.collect(Collectors.toList())` with java17 `.toList()`